Uppercase filter applied for name

--- a/app/views/teamView.html
+++ b/app/views/teamView.html
@@ -39,7 +39,7 @@
                                 <p class="desc">"..{{ person.desc }}"</p>
                             </div>
                             <div class="bottom-box2">
-                                <p class="title">{{ person.title }}</p>
+                                <p class="title">{{ person.name | uppercase }}</p>
                                 <p class="pos">{{ person.position }}</p>
                                 <p class="links">
                                     <a href="{{ person.linkedin }}" target="_blank" class="btn btn-xs btn-info">
