--- a/app/views/teamView.html
+++ b/app/views/teamView.html
@@ -40,7 +40,8 @@
         </div>
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12" ng-repeat="person in team | filter: {category: 'team', name: query}| orderBy: empOrderBy">
-                <div class="panel panel-default team-panel wow fadeInUp animated">
+                <div class="panel panel-default team-panel wow fadeInUp animated"
+                        style="{{ 'background-image: url(' + profileImagesPath + person.shortname + '.jpg);' }}">
                     <div class="panel-body team_box_img" id="{{ person.shortname }}">
                         <div class="hover-div">
                             <div class="bottom-box1">
