--- a/css/style.css
+++ b/css/style.css
@@ -797,6 +797,11 @@ section.module .row .page-title {
     text-align: center;
     border: 5px solid rgb(74, 160, 186);
 }
+.team_box_img.details {
+    max-width: 300px;
+    margin: 1em auto;
+    border: 0;
+}
 .panel.panel-default.team-panel {
     border: 12px solid white;
     border-radius: 0;
@@ -820,14 +825,17 @@ section.module .row .page-title {
     background-color: rgba(39, 39, 39, 0.87);
     cursor: default;
 }
+.detail-box1,
 .bottom-box1 {
+    padding: 5px 15px;
+}
+.bottom-box1 {
+    text-align: center;
     min-height: 110px;
     min-width: 100%;
     bottom: 100px;
     position: absolute;
-    padding: 5px 15px;
     color: white;
-    text-align: center;
 }
 .bottom-box1> p.desc {
     font-family: 'Kaushan Script', cursive;
@@ -838,36 +846,58 @@ section.module .row .page-title {
     -o-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
+.detail-box2 {
+    text-align: center;
+}
+.detail-box2,
+.bottom-box2 {
+    padding: 5px 15px;
+}
 .bottom-box2 {
     min-height: 60px;
     min-width: 100%;
     background-color: rgba(255, 255, 255, 1);
     bottom: 0;
     position: absolute;
-    padding: 5px 15px;
     color: rgb(61, 61, 61);
 }
-.bottom-box2>p.title {
-    position: absolute;
+.detail-box2 > a.title,
+.bottom-box2 > a.title {
     font-weight: 500;
     font-size: 1.5em;
     margin-bottom: 5px;
+}
+.detail-box2 > a.title {
+    cursor: default;
+}
+.detail-box2 > a.title:focus,
+.detail-box2 > a.title:hover {
+    text-decoration: none;
+}
+.bottom-box2 > a.title {
+    position: absolute;
     bottom: 30%;
     left: 5%;
 }
+.detail-box2 > p.pos,
 .bottom-box2 > p.pos {
-    position: absolute;
     font-weight: 400;
     font-size: 1.1em;
+}
+.bottom-box2 > p.pos {
+    position: absolute;
     margin-bottom: 0;
     bottom: 5%;
     left: 5%;
     color: rgba(26, 26, 26, 0.47);
 }
+.detail-box2 > p.links,
 .bottom-box2 > p.links {
-    position: absolute;
     font-size: 1.2em;
     margin-bottom: 0;
+}
+.bottom-box2 > p.links {
+    position: absolute;
     bottom: 10%;
     right: 5%;
 }
