Fixed top padding in footer

--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,12 @@ img.bg {
 .brand-img {
     height: 2.5em;
 }
+
+/*------------------------------------------------------------------------------*/
+/* Brand Img Style */
+.footer ul {
+    margin-top: 10px;
+}
 /*------------------------------------------------------------------------------*/
 /* Angular Animation Style */
 /*  ng-view Animation  */
