Font and color changes

--- a/app/views/contactusView.html
+++ b/app/views/contactusView.html
@@ -7,17 +7,17 @@
     <div class="col-md-4">
         <ul class="list-group">
             <li class="list-group-item">&nbsp;
-                <h3 class="list-group-item-heading">We are available 24/7, so don't hesitate to contact our teams.</h3>
+                <h3 class="list-group-item-heading ubuntu">We are available 24/7, so don't hesitate to contact us.</h3>
             </li>
             <li class="list-group-item"><i class="fa fa-envelope-o"></i>&nbsp; General - contact@silverpush.co</li>
             <li class="list-group-item"><i class="fa fa-envelope-o"></i>&nbsp; Sales - sales@silverpush.co</li>
             <li class="list-group-item"><i class="fa fa-envelope-o"></i>&nbsp; Operations - ops@silverpush.co</li>
             <li class="list-group-item">&nbsp;
-                <h3 class="list-group-item-heading">US HQ</h3>
+                <h3 class="list-group-item-heading ubuntu">US HQ</h3>
             </li>
             <li class="list-group-item"><i class="fa fa-map-marker"></i>&nbsp; Ste 1348, 560 Mission St,San Francisco, CA 94105</li>
             <li class="list-group-item">&nbsp;
-                <h3 class="list-group-item-heading">India Office</h3>
+                <h3 class="list-group-item-heading ubuntu">India Office</h3>
             </li>
             <li class="list-group-item"><i class="fa fa-map-marker"></i>&nbsp; 3rd Floor, Times Square, B-Block,Sushant Lok- I,Gurgaon-122002</li>
         </ul>
