--- a/app/views/investorsView.html
+++ b/app/views/investorsView.html
@@ -11,7 +11,7 @@
             <legend>Funds</legend>
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/idg_ventures.jpg" class="center-block img-responsive img-gs" alt=".">
                             <h3>IDG Ventures</h3>
@@ -19,7 +19,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/500_startups.jpg" class="center-block img-responsive img-gs" alt=".">
                             <h3>500 Startups</h3>
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/unilazer_ventures.jpg" class="center-block img-responsive img-gs" alt=".">
                             <h3>Unilazer Ventures</h3>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/palash_ventures.jpg" class="center-block img-responsive img-gs" alt=".">
                             <h3>Palaash Ventures</h3>
@@ -46,7 +46,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/TA_ventures.jpg" class="center-block img-responsive img-gs" alt=".">
                             <h3>TA Ventures</h3>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/gsf_acc.jpg" class="center-block img-responsive img-gs" alt=".">
                             <h3>GSF Accelerator</h3>
@@ -67,7 +67,7 @@
             <legend>Angels</legend>
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/fabrice_grinda.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
                             <h3>Fabrice Grinda</h3>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/prashant_mehta.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
                             <h3>Prashant Mehta</h3>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/siddharth_puri.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
                             <h3>Siddharth Puri</h3>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/tuoc_luong.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
                             <h3>Tuoc Luong</h3>
@@ -105,7 +105,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/k_ganesh.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
                             <h3>K. Ganesh</h3>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/rajesh_sawhney.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
                             <h3>Rajesh Sawhney</h3>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <!-- <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <div class="panel  panel-default">
+                <div class="panel  panel-default angel">
                     <div class="panel-body">
                         <img src="img/investors-img/mike_okeyere.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
                         <h3>Mike Okyere</h3>
@@ -132,7 +132,7 @@
                 </div>
             </div> -->
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/dinesh_agarwal.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
                             <h3>Dinesh Agarwal</h3>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                    <div class="panel  panel-default">
+                    <div class="panel  panel-default angel">
                         <div class="panel-body">
                             <img src="img/investors-img/nish_bhutani.jpg" class="center-block img-responsive img-circle img-gs" alt=".">
                             <h3>Nish Bhutani</h3>
