--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -2,9 +2,9 @@
 <section class="module parallax parallax-home">
     <div class="container">
         <div class="col-lg-offset-7 col-lg-5 col-md-offset-7 col-md-5 col-sm-offset-6 col-sm-6 col-xs-offset-1 col-xs-11" id="header-txt" style="background-color:rgba(255, 255, 255, 0.48);">
-            <div class="animated fadeIn">
-                <b class="animated bounceInDown">Unifying</b>
-                <p class="animated bounceInUp">people, devices and data</p>
+            <div class="">
+                <b class="">Unifying</b>
+                <p class="">people, devices and data</p>
             </div>
         </div>
     </div>
@@ -14,21 +14,21 @@
 <section class="module content" id="tech-div">
     <div class="container">
         <h2>Creating Deterministic Cross Device Pairs</h2>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a>
                 <img src="img/home-img/audiobeacon-icon.png" class="center-block" alt="">
                 <h3>Capture Audio Beacon</h3>
             </a>
             <p>When a Silverpush Audio beacon is emitted from a device in proximity of a Silverpush SDK, a pair is made between the beacon's unique ID and the mobile device ID</p>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a>
                 <img src="img/home-img/data-icon.png" class="center-block" alt="">
                 <h3>Pair Devices</h3>
             </a>
             <p>Once the pair is made, the two ID's are sent to Silverpush's Server and saved under the user's Unique Silverpush ID</p>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a>
                 <img src="img/home-img/retarget-icon.png" class="center-block" alt="">
                 <h3>Extend Matches</h3>
@@ -46,19 +46,19 @@
 <section class="module content" id="product-div">
     <div class="container">
         <h2>..built upon our cross device data intelligence</h2>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a href="#!analytics">
                 <img src="img/home-img/analytics-icon.png" class="center-block" alt="">
                 <h3>SilverPush Analytics</h3>
             </a>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInUp">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a href="#!targeting">
                 <img src="img/home-img/targeting-icon.png" class="center-block" alt="">
                 <h3>Audience Targeting</h3>
             </a>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInRight">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a href="#!measurement">
                 <img src="img/home-img/measurement-icon.png" class="center-block" alt="">
                 <h3>Measurement</h3>
@@ -95,7 +95,7 @@
 <section class="module content no-bottom-pad bg-white">
     <div class="container-fluid">
         <h1 class="retroshadow">..In a Nutshell</h1>
-        <div class="row">
+        <div class="row black-shadow">
             <div class="info-box">
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 clr">
                     <p>50 TB</p>
