--- a/css/style.css
+++ b/css/style.css
@@ -245,21 +245,18 @@ section.module.parallax-measurement {
 h1, .search {
     font-family: "Ubuntu", sans-serif;
     padding: 20px 0 20px 0;
-    text-align: center;
     text-rendering: optimizeLegibility;
     margin: 0;
+    text-transform: uppercase;
 }
 
 h1 {
     font-size: 70px;
-    text-transform: uppercase;
+    text-align: center;
 }
 
 .search {
-    font-size: 57px;
-    width: 100%;
-    background: #f5f5f5;
-    border: 1px solid rgba(169, 169, 169, 0.3);
+    font-size: 40px;
 }
 
 h1.elegantshadow {
@@ -934,6 +931,171 @@ section.module .row .page-title {
     width: 1.4em;
 }
 
+/* Team Search Input */
+
+.input {
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+    width: 100%;
+    vertical-align: top;
+    font-weight: 300;
+    overflow: hidden;
+    margin-top: -20px;
+}
+
+.input__field {
+    position: relative;
+    display: block;
+    float: right;
+    border: none;
+    border-radius: 0;
+    -webkit-appearance: none; /* for box shadows to show on iOS */
+}
+
+.input__field:focus {
+    outline: none;
+}
+
+.input__label {
+    float: right;
+    font-weight: 300;
+    padding: 0 1em;
+    color: #6a7989;
+    font-size: 70.25%;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.input__label-content {
+    position: absolute;
+    display: block;
+    padding: 1.6em 0;
+    width: 100%;
+}
+
+.graphic {
+    position: absolute;
+    top: 0;
+    left: 0;
+    fill: none;
+}
+
+.icon {
+    color: #ddd;
+    font-size: 150%;
+}
+
+.input__field {
+    padding: 0.85em 0.15em 0;
+    width: 100%;
+    background: transparent;
+    color: #595F6E;
+}
+
+.input__label {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 0 0.25em;
+    width: 100%;
+    height: calc(100% - 1em);
+    text-align: left;
+    pointer-events: none;
+}
+
+.input__label::before,
+.input__label::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 10px);
+    border-bottom: 1px solid #B9C1CA;
+}
+
+.input__label::after {
+    margin-top: 2px;
+    border-bottom: 4px solid red;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: transform 0.3s;
+}
+
+.input__label::after {
+    border-color: hsl(200, 100%, 50%);
+}
+
+.input__field:focus + .input__label::after {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.input__field:focus + .input__label .input__label-content {
+    -webkit-animation: material-effect 0.3s forwards;
+    animation: material-effect 0.3s forwards;
+}
+
+@-webkit-keyframes material-effect {
+    50% {
+        opacity: 0;
+        -webkit-transform: translate3d(1em, 0, 0);
+        transform: translate3d(1em, 0, 0);
+    }
+    51% {
+        opacity: 0;
+        -webkit-transform: translate3d(-1em, -40%, 0);
+        transform: translate3d(-1em, -40%, 0);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translate3d(0, -40%, 0);
+        transform: translate3d(0, -40%, 0);
+    }
+}
+
+@-moz-keyframes material-effect {
+    50% {
+        opacity: 0;
+        -webkit-transform: translate3d(1em, 0, 0);
+        transform: translate3d(1em, 0, 0);
+    }
+    51% {
+        opacity: 0;
+        -webkit-transform: translate3d(-1em, -40%, 0);
+        transform: translate3d(-1em, -40%, 0);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translate3d(0, -40%, 0);
+        transform: translate3d(0, -40%, 0);
+    }
+}
+
+@keyframes material-effect {
+    50% {
+        opacity: 0;
+        -webkit-transform: translate3d(1em, 0, 0);
+        transform: translate3d(1em, 0, 0);
+    }
+    51% {
+        opacity: 0;
+        -webkit-transform: translate3d(-1em, -40%, 0);
+        transform: translate3d(-1em, -40%, 0);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translate3d(0, -40%, 0);
+        transform: translate3d(0, -40%, 0);
+    }
+}
+
 /* Navigation */
 .nav,
 .dropdown-menu {
@@ -944,7 +1106,7 @@ section.module .row .page-title {
     color: #000;
 }
 
-/* list group item */
+/* List Items */
 .list-group-item {
     font-size: 1.2em;
 }
