Added horizontal lines for smaller devices to separate sections

--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -20,6 +20,7 @@
                 <h3>Capture Audio Beacon</h3>
             </a>
             <p>When a Silverpush Audio beacon is emitted from a device in proximity of a Silverpush SDK, a pair is made between the beacon's unique ID and the mobile device ID</p>
+            <hr class="hidden-md hidden-lg">
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a>
@@ -27,6 +28,7 @@
                 <h3>Pair Devices</h3>
             </a>
             <p>Once the pair is made, the two ID's are sent to Silverpush's Server and saved under the user's Unique Silverpush ID</p>
+            <hr class="hidden-md hidden-lg">
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a>
@@ -51,12 +53,14 @@
                 <img src="img/home-img/analytics-icon.png" class="center-block" alt="">
                 <h3>SilverPush Analytics</h3>
             </a>
+            <hr class="hidden-md hidden-lg">
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a href="#!targeting">
                 <img src="img/home-img/targeting-icon.png" class="center-block" alt="">
                 <h3>Audience Targeting</h3>
             </a>
+            <hr class="hidden-md hidden-lg">
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
             <a href="#!measurement">
