--- a/app/views/targetingView.html
+++ b/app/views/targetingView.html
@@ -14,6 +14,7 @@
                 <h3>Programmatic DSP</h3>
             </a>
             <p>A Real Time Bidding enabled DSP connecting your brand with millions of unique users through multiple exchanges. Reach your exact target audience in the best price with dynamic bidding thus delivering an unmatched experience in various screens.</p>
+            <hr class="hidden-md hidden-lg">
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="550ms">
             <a>
@@ -21,6 +22,7 @@
                 <h3>Mobile Retargeting</h3>
             </a>
             <p>Retarget the audience interested in your offerings on their personal devices by implementing our pixel/ SDK in your mobile website/app. Clear the pathway to conversion by combining 1st party and 3rd party data using our fingerprinting technology.</p>
+            <hr class="hidden-md hidden-lg">
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="600ms">
             <a>
