--- a/css/style.css
+++ b/css/style.css
@@ -1106,6 +1106,44 @@ section.module .row .page-title {
     color: #000;
 }
 
+/* Hamburg  */
+.navbar-inverse .navbar-toggle,
+.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:hover {
+    border: 0;
+    background: transparent;
+}
+
+.navbar-toggle .icon-bar:nth-of-type(2) {
+    top: 1px;
+}
+
+.navbar-toggle .icon-bar:nth-of-type(3) {
+    top: 2px;
+}
+
+.navbar-toggle .icon-bar {
+    position: relative;
+    -webkit-transition: all 200ms cubic-bezier(0.64, 0.57, 0.67, 1.53);
+    -moz-transition: all 200ms cubic-bezier(0.64, 0.57, 0.67, 1.53);
+    -o-transition: all 200ms cubic-bezier(0.64, 0.57, 0.67, 1.53);
+    transition: all 200ms cubic-bezier(0.64, 0.57, 0.67, 1.53);
+}
+
+.navbar-toggle.active .icon-bar:nth-of-type(1) {
+    top: 6px;
+    transform: rotate(45deg);
+}
+
+.navbar-toggle.active .icon-bar:nth-of-type(2) {
+    background-color: transparent;
+}
+
+.navbar-toggle.active .icon-bar:nth-of-type(3) {
+    top: -6px;
+    transform: rotate(-45deg);
+}
+
 /* List Items */
 .list-group-item {
     font-size: 1.2em;
