--- a/css/style.css
+++ b/css/style.css
@@ -815,7 +815,9 @@ section.module .row .page-title {
 .team_box_img.details {
     max-width: 300px;
     margin: 1em auto;
-    border: 0;
+    border: 4px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.6);
 }
 .panel.panel-default.team-panel {
     border-radius: 0;
@@ -823,6 +825,11 @@ section.module .row .page-title {
     border: 5px solid #FFF;
     overflow: hidden;
     background-size: cover;
+}
+.panel.panel-default.box {
+    border: 1px solid #DDD;
+    border-bottom-width: 2px;
+    box-shadow: none;
 }
 .team_box_img.long {
     height: 400px;
@@ -847,6 +854,11 @@ section.module .row .page-title {
 .bottom-box1 {
     padding: 5px 15px;
 }
+.detail-box1 .name {
+    text-align: center;
+    margin: 0 0 .25em;
+}
+
 .bottom-box1 {
     text-align: center;
     min-height: 110px;
@@ -905,6 +917,7 @@ section.module .row .page-title {
 .bottom-box2 > p.pos {
     font-weight: 400;
     font-size: 1.1em;
+    margin-bottom: 1em;
 }
 .bottom-box2 > p.pos {
     position: absolute;
@@ -917,6 +930,10 @@ section.module .row .page-title {
 .bottom-box2 > p.links {
     font-size: 1.2em;
     margin-bottom: 0;
+}
+.detail-box2 > p.links > a {
+    font-size: 1em;
+    margin-bottom: 0.5em;
 }
 .bottom-box2 > p.links {
     position: absolute;
