Fix: Wrong class name applied

--- a/app/views/teamView.html
+++ b/app/views/teamView.html
@@ -9,7 +9,7 @@
         <div class="row team">
             <h1>Founders</h1>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" ng-repeat="person in team|filter:{category: 'founders'}">
-                <div class="panel panel-default team-panel wow animated fadeInLeft">
+                <div class="panel panel-default team-panel wow animated fadeIn">
                     <div class="panel-body team_box_img" id="{{ person.shortname }}"
                         style="{{ 'background-image: url(' + profileImagesPath + person.shortname + '.jpg);' }}">
                         <div class="hover-div">
