Reduced font size of copyright symbol

--- a/css/style.css
+++ b/css/style.css
@@ -475,9 +475,14 @@ img.bg {
 }
 
 /*------------------------------------------------------------------------------*/
-/* Brand Img Style */
+/* Footer */
 .footer ul {
     margin-top: 10px;
+}
+
+.copyright {
+    font-size: 1em;
+    color: #FFF;
 }
 /*------------------------------------------------------------------------------*/
 /* Angular Animation Style */
