Fix: Image is not exactly centered

--- a/app/views/companyView.html
+++ b/app/views/companyView.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 animated fadeIn">
-                <img src="img/home-img/aboutus.png" class="img-responsive" />
+                <img src="img/home-img/aboutus.png" class="mobile img-responsive" />
             </div>
         </div>
     </div>
