Adding classname as font is not good idea

--- a/app/views/homeView.html
+++ b/app/views/homeView.html
@@ -14,7 +14,7 @@
 <section class="module content" id="tech-div">
     <div class="container">
         <h2>Creating Deterministic Cross Device Pairs</h2>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <a>
                 <img src="img/home-img/audiobeacon-icon.png" class="center-block" alt="">
                 <h3>Capture Audio Beacon</h3>
@@ -22,7 +22,7 @@
             <p>When a Silverpush Audio beacon is emitted from a device in proximity of a Silverpush SDK, a pair is made between the beacon's unique ID and the mobile device ID</p>
             <hr class="hidden-md hidden-lg">
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <a>
                 <img src="img/home-img/data-icon.png" class="center-block" alt="">
                 <h3>Pair Devices</h3>
@@ -30,7 +30,7 @@
             <p>Once the pair is made, the two ID's are sent to Silverpush's Server and saved under the user's Unique Silverpush ID</p>
             <hr class="hidden-md hidden-lg">
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <a>
                 <img src="img/home-img/retarget-icon.png" class="center-block" alt="">
                 <h3>Extend Matches</h3>
@@ -48,21 +48,21 @@
 <section class="module content" id="product-div">
     <div class="container">
         <h2>..built upon our cross device data intelligence</h2>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <a href="#!analytics">
                 <img src="img/home-img/analytics-icon.png" class="center-block" alt="">
                 <h3>SilverPush Analytics</h3>
             </a>
             <hr class="hidden-md hidden-lg">
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <a href="#!targeting">
                 <img src="img/home-img/targeting-icon.png" class="center-block" alt="">
                 <h3>Audience Targeting</h3>
             </a>
             <hr class="hidden-md hidden-lg">
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 ubuntu">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <a href="#!measurement">
                 <img src="img/home-img/measurement-icon.png" class="center-block" alt="">
                 <h3>Measurement</h3>
