--- a/app/views/measurementView.html
+++ b/app/views/measurementView.html
@@ -8,7 +8,7 @@
         <div class="col-md-5">
             <ul class="list-group">
                 <li class="list-group-item">&nbsp;
-                    <h3 class="list-group-item-heading ubuntu">Interactive dashboard that has built-in capability to</h3>
+                    <h3 class="list-group-item-heading">Interactive dashboard that has built-in capability to</h3>
                 </li>
                 <li class="list-group-item"><i class="fa fa-check-square-o"></i>&nbsp; Track your mobile app performance and usage pattern</li>
                 <li class="list-group-item"><i class="fa fa-check-square-o"></i>&nbsp; Discover the impressions that are actually viewed </li>
