--- a/app/views/teamView.html
+++ b/app/views/teamView.html
@@ -35,7 +35,7 @@
                 <h1>Team</h1>
             </div>
             <div class="col-md-6">
-                <span class="input search ubuntu">
+                <span class="input search">
                     <input class="input__field input__field" type="text" id="search" ng-model="query" value="" autocomplete="off">
                     <label class="input__label input__label" for="search">
                         <span class="input__label-content input__label-content">Search</span>
