--- a/app/views/analyticsView.html
+++ b/app/views/analyticsView.html
@@ -9,7 +9,7 @@
         <div class="col-md-5">
             <ul class="list-group">
                 <li class="list-group-item">&nbsp;
-                    <h3 class="list-group-item-heading ubuntu">Get deep insights on</h3>
+                    <h3 class="list-group-item-heading">Get deep insights on</h3>
                 </li>
                 <li class="list-group-item"><i class="fa fa-check-square-o"></i>&nbsp; User Behavior across different devices</li>
                 <li class="list-group-item"><i class="fa fa-check-square-o"></i>&nbsp; Multiple devices associated with the user</li>
