--- a/css/style.css
+++ b/css/style.css
@@ -1199,7 +1199,6 @@ nav ul > li {
 .panel-box .panel {
     border-radius: 0;
     border: 0;
-    display: inline-block;
     vertical-align: middle;
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
@@ -1210,6 +1209,9 @@ nav ul > li {
     position: relative;
     overflow: hidden;
     text-align: center;
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 .panel-box .panel:before {
     content: "";
@@ -1228,10 +1230,6 @@ nav ul > li {
     transition-duration: 0.3s;
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out;
-}
-.panel-box .panel:hover:before, .panel-box .panel:focus:before, .panel-box .panel:active:before {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
 }
 
 
