--- a/css/style.css
+++ b/css/style.css
@@ -721,6 +721,7 @@ ul#ticker li {
     background-color: rgba(249, 249, 249, 0.21);
     color: rgb(98, 98, 98);
     padding: 2em;
+    width: 100%;
     margin: 20px 0;
     height: 16em;
     display: inline-block;
